name:                api-vt
version:             0.0
synopsis:            Haskell API Versioning Tool
description:         Haskell API Versioning Tool
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Krzysztof Skrzetnicki
maintainer:          krzysztof.skrzetnicki@gmail.com
build-depends:       base
build-type:          Simple

executable:          api-vt
main-is:             api-vt.hs
build-depends:       Diff >= 0.1.2 && < 0.1.3, 
                     haskell-src-exts >= 1.3.0 && < 1.3.1