name:                package-vt
version:             0.0
synopsis:            Haskell Package Versioning Tool
description:         Haskell Package Versioning Tool
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Krzysztof Skrzetnicki
maintainer:          krzysztof.skrzetnicki@gmail.com
build-depends:       base
build-type:          Simple

executable:          package-vt
main-is:             package-vt.hs
build-depends:       Diff >= 0.1.2 && < 0.1.3, 
                     haskell-src-exts >= 1.3.0 && < 1.3.1,
		     filepath >= 1.1.0 && < 1.2.0,
		     Cabal >= 1.6.0 && < 1.7